@@ -1,3 +1,5 @@
+ - Deprecate DofMap, member methods vertex_to_dof_map and dof_to_vertex_map
+ - Add free functions: vertex_to_dof_map and dof_to_vertex_map, and correct the ordering of the map.
  - CMake now takes care of calling the correct generate-foo script if so needed.
  - Feature: Add new built-in computational geometry library (BoundingBoxTree)
  - Feature: Add support for setting name and label to an Expression when constructed
